// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel Basic initialization 1`] = `
<React.Fragment>
  <label
    className="euiFormLabel"
    id="ml_aria_label_undefined"
  />
  <Component
    position="top"
  />
</React.Fragment>
`;

exports[`FormLabel Full initialization 1`] = `
<React.Fragment>
  <label
    className="euiFormLabel"
    id="ml_aria_label_uid"
  >
    Label Text
  </label>
  <Component
    id="uid"
    position="top"
  />
</React.Fragment>
`;
